fix cards alignment on create referral page

--- a/src/pages/User/Referrals/Referrals.module.scss
+++ b/src/pages/User/Referrals/Referrals.module.scss
@@ -14,4 +14,5 @@
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+    flex-wrap: wrap;
 }
